--- a/README.adoc
+++ b/README.adoc
@@ -12,6 +12,17 @@ Refer to the link:https://github.com/incodehq/contactapp/wiki[Wiki] for detailed
 == Domain Model
 image:http://yuml.me/0ec16938.svg["Domain Model", link="http://yuml.me/edit/0ec16938"]
 
+== Screenshots
+
+These screenshots (taken 13 april 2016) show usage of the mobile app as well as the backend app.
+
+image:http://i.imgur.com/ETKG6Xe.png[width="197"]
+image:http://i.imgur.com/zMX6OYq.png[width="197"]
+image:http://i.imgur.com/qhXhKiu.png[width="197"]
+image:http://i.imgur.com/TZMIkzz.png[width="600"]
+image:http://i.imgur.com/j0x7bw8.png[width="600"]
+image:http://i.imgur.com/2dIXCfW.png[width="600"]
+
 == License
 
 [source]
