--- a/README.adoc
+++ b/README.adoc
@@ -16,12 +16,10 @@ image:http://yuml.me/0ec16938.svg["Domain Model", link="http://yuml.me/edit/0ec1
 
 These screenshots (taken 13 april 2016) show usage of the mobile app as well as the backend app.
 
-image:http://i.imgur.com/ETKG6Xe.png[width="197"]
-image:http://i.imgur.com/zMX6OYq.png[width="197"]
-image:http://i.imgur.com/qhXhKiu.png[width="197"]
-image:http://i.imgur.com/TZMIkzz.png[width="600"]
-image:http://i.imgur.com/j0x7bw8.png[width="600"]
-image:http://i.imgur.com/2dIXCfW.png[width="600"]
+image:/docs/contactapp-frontend.png[width="600"]
+image:/docs/contactapp-backend-homepage.png[width="600"]
+image:/docs/contactapp-backend-amiens-property.png[width="600"]
+image:/docs/contactapp-backend-benoit-foure.png[width="600"]
 
 == License
 
